[Git] Add to gitignore: .ignore folder and files related to personal environments.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@ infrastructure/cognitolambda/node_modules
 public/*
 /frontend/tsconfig.tsbuildinfo
 .idea/
+.ignore
+infrastructure/environments/*
+!infrastructure/environments/demo-*
