[Infrastructure] Add fsx:DescribeFileCaches to ParallelClusterUIUserRole so that the wizard is able to list existing File Caches.

--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -731,9 +731,11 @@ Resources:
           - Action:
               - fsx:DescribeFileSystems
               - fsx:DescribeVolumes
+              - fsx:DescribeFileCaches
             Resource:
               - !Sub arn:${AWS::Partition}:fsx:*:${AWS::AccountId}:volume/*
               - !Sub arn:${AWS::Partition}:fsx:*:${AWS::AccountId}:file-system/*
+              - !Sub arn:${AWS::Partition}:fsx:*:${AWS::AccountId}:file-cache/*
             Effect: Allow
             Sid: FsxPolicy
 
