[Environments] Add missing parameters to the demo environment.

--- a/infrastructure/environments/demo-cfn-update-args.yaml
+++ b/infrastructure/environments/demo-cfn-update-args.yaml
@@ -1,17 +1,37 @@
 TemplateURL: BUCKET_URL_PLACEHOLDER/parallelcluster-ui.yaml
 Parameters:
+  - ParameterKey: AdminUserEmail
+    UsePreviousValue: true
   - ParameterKey: Version
     ParameterValue: 3.8.0
   - ParameterKey: InfrastructureBucket
     ParameterValue: BUCKET_URL_PLACEHOLDER
+  - ParameterKey: PublicEcrImageUri
+    ParameterValue: public.ecr.aws/pcm/parallelcluster-ui:latest
+#   Use the value below if you want to deploy the local image of PCUI.
+#    ParameterValue: DEMO_ACCOUNT_ID.dkr.ecr.DEMO_REGION.amazonaws.com/parallelcluster-ui:latest
   - ParameterKey: UserPoolId
     UsePreviousValue: true
   - ParameterKey: UserPoolAuthDomain
     UsePreviousValue: true
   - ParameterKey: SNSRole
     UsePreviousValue: true
-  - ParameterKey: PublicEcrImageUri
-    ParameterValue: public.ecr.aws/pcm/parallelcluster-ui:latest
+  - ParameterKey: ImageBuilderVpcId
+    UsePreviousValue: true
+  - ParameterKey: ImageBuilderSubnetId
+    UsePreviousValue: true
+  - ParameterKey: VpcEndpointId
+    UsePreviousValue: true
+  - ParameterKey: LambdaSubnetIds
+    UsePreviousValue: true
+  - ParameterKey: LambdaSecurityGroupIds
+    UsePreviousValue: true
+  - ParameterKey: PermissionsBoundaryPolicy
+    UsePreviousValue: true
+  - ParameterKey: PermissionsBoundaryPolicyPCAPI
+    UsePreviousValue: true
+  - ParameterKey: IAMRoleAndPolicyPrefix
+    UsePreviousValue: true
 Capabilities:
   - CAPABILITY_AUTO_EXPAND
   - CAPABILITY_NAMED_IAM
