--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@
 #
 attrs==23.1.0
     # via pytest
+blinker==1.7.0
+    # via flask
 boto3==1.24.30
     # via -r requirements.in
 botocore==1.27.96
@@ -24,7 +26,7 @@ ecdsa==0.18.0
     # via python-jose
 exceptiongroup==1.1.1
     # via pytest
-flask==2.1.2
+flask==2.3.3
     # via
     #   -r requirements.in
     #   flask-cors
@@ -40,7 +42,7 @@ itsdangerous==2.1.2
     # via
     #   -r requirements.in
     #   flask
-jinja2==3.1.2
+jinja2==3.1.3
     # via flask
 jmespath==1.0.1
     # via
