--- a/requirements.in
+++ b/requirements.in
@@ -4,7 +4,7 @@ Werkzeug==2.3.8
 boto3==1.24.30
 requests==2.31.0
 urllib3==1.26.18
-python-jose==3.3.0
+python-jose[cryptography]==3.3.0
 PyYAML==6.0
 pytest==7.2.2
 pytest-mock==3.8.2
