--- a/requirements.txt
+++ b/requirements.txt
@@ -16,10 +16,14 @@ certifi==2023.7.22
     # via
     #   -r requirements.in
     #   requests
+cffi==1.16.0
+    # via cryptography
 charset-normalizer==2.1.1
     # via requests
 click==8.1.3
     # via flask
+cryptography==42.0.2
+    # via python-jose
 ecdsa==0.18.0
     # via python-jose
 exceptiongroup==1.1.1
@@ -62,6 +66,8 @@ pyasn1==0.5.0
     # via
     #   python-jose
     #   rsa
+pycparser==2.21
+    # via cffi
 pytest==7.2.2
     # via
     #   -r requirements.in
@@ -70,7 +76,7 @@ pytest-mock==3.8.2
     # via -r requirements.in
 python-dateutil==2.8.2
     # via botocore
-python-jose==3.3.0
+python-jose[cryptography]==3.3.0
     # via -r requirements.in
 pyyaml==6.0
     # via -r requirements.in
