--- a/requirements.in
+++ b/requirements.in
@@ -4,6 +4,7 @@ Werkzeug==2.3.8
 boto3==1.24.30
 requests==2.31.0
 urllib3==1.26.18
+# Installing cryptography backend since it is the recommended one: https://pypi.org/project/python-jose/
 python-jose[cryptography]==3.3.0
 PyYAML==6.0
 pytest==7.2.2
