--- a/requirements.txt
+++ b/requirements.txt
@@ -24,8 +24,10 @@ charset-normalizer==2.1.1
     # via requests
 click==8.1.3
     # via flask
-cryptography==42.0.2
-    # via python-jose
+cryptography==42.0.4
+    # via
+    #   -r requirements.in
+    #   python-jose
 ecdsa==0.18.0
     # via python-jose
 exceptiongroup==1.1.1
