Fix support for custom domain name.
In particular, the new optional parameter 'CustomDomain' is added to the PCUI stack to specify the custom domain name.

--- a/infrastructure/environments/demo-cfn-create-args.yaml
+++ b/infrastructure/environments/demo-cfn-create-args.yaml
@@ -32,6 +32,8 @@ Parameters:
 #    ParameterValue: arn:aws:iam::xxxxxxxxxx:policy/xxxxxxxxxx
 #  - ParameterKey: IAMRoleAndPolicyPrefix
 #    ParameterValue: xxxxxxxxxx
+#  - ParameterKey: CustomDomain
+#    ParameterValue: xxxxxxxxxx
 Capabilities:
   - CAPABILITY_AUTO_EXPAND
   - CAPABILITY_NAMED_IAM
