--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -32,9 +32,8 @@ Parameters:
     Type: String
     Default: ''
   Version:
-    Description: Version of AWS ParallelCluster to deploy
+    Description: Version of AWS ParallelCluster to deploy.
     Type: String
-    Default: 3.11.1
   ImageBuilderVpcId:
     Description: (Optional) Select the VPC to use for building the container images. If not selected, default VPC will be used.
     Type: String
