--- a/infrastructure/parallelcluster-ui.yaml
+++ b/infrastructure/parallelcluster-ui.yaml
@@ -34,6 +34,8 @@ Parameters:
   Version:
     Description: Version of AWS ParallelCluster to deploy.
     Type: String
+    AllowedPattern: "^([0-9]+)\\.([0-9]+)\\.([0-9]+)$"
+    ConstraintDescription: Please specify a valid ParallelCluster version.
   ImageBuilderVpcId:
     Description: (Optional) Select the VPC to use for building the container images. If not selected, default VPC will be used.
     Type: String
