ci: scope down permissions for publish-adrs.yml

--- a/.github/workflows/publish-adrs.yml
+++ b/.github/workflows/publish-adrs.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main
+permissions:
+  contents: write
+  pages: write
+
 jobs:
   build-and-publish:
     runs-on: ubuntu-latest
